# observia-chatbot-dataset

./: .gitignore  Makefile  README.md  dataset.json  documents.ipynb  download-vespa-database.py  filterlangs.py  gen.sh  goldenset.py  pyproject.toml  questiongen.py  questions.txt  readme.md  requirements.txt  step1-download-vespa-database.py  step1.0-download-vespa-database.py  step2-topic-generation.py  step2.0-topic-generation.py  step2.1-extract-primary-questions.py  step2.2-extract-primary-questions.py  step2.9-optimize-questions_only.py  step3-generate-danswer-dataset.py  step3.0-generate-danswer-dataset.py  step3.1-optimize-danswer-dataset.py  step3.5-datasets-to-virtual-trulens.py  step4-dataset2xls.py  step4.0-dataset2xls.py  topics-generation-cca-casestudies.ipynb
evaluations/: .env.example  01.get_questions_from_langfuse.py  02.generate_answers.py  03.run_ragas_evals.py  04.run_excternal_evals.py  05.store_evals_in_langfuse.py  evaluation-config.json  evaluation_config-small.json  infuse.py  initialize_gs_in_langfuse.py
guardrails/: .env.example  01.get_gs_questions.py  02.get_user_questions.py  03.test_questions.py  utils.py
notebooks/: dataset2xls.py  questions.txt  topics-generation-cca-copernicus.ipynb  vespa-second-try.ipynb
ragas-test/: ragas-quickstart.ipynb
tools/: get_vespa_text_sizes.py
trulens-test/: trulens-quickstart.ipynb
