[tool.poetry]
name = "gendataset"
version = "0.1.0"
description = ""
authors = ["Tiberiu Ichim <tiberiu.ichim@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
trulens = "^1.3.0"
trulens-providers-openai = "^1.3.0"
bertopic = {extras = ["flair", "use"], version = "^0.16.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
